fix for lang list overflow

--- a/css/technologies-list.css
+++ b/css/technologies-list.css
@@ -39,6 +39,7 @@
 
 .languages-list {
   padding-top: 25px;
+  overflow-x: hidden;
 }
 
 .languages-list hr {
